dxscale/core/serviceBase/objects/Service__mdt/fields/Extensible__c.field-meta.xml
<CustomField>
    <fullName>Extensible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this is a service which supports extensions - defaults to false</description>
    <inlineHelpText>Checked if this is a service which supports extensions - defaults to false</inlineHelpText>
    <label>Extensible</label>
    <type>Checkbox</type>
</CustomField>