dxscale/core/serviceBase/objects/Service__mdt/fields/External_Credentials_Label__c.field-meta.xml
<CustomField>
    <fullName>External_Credentials_Label__c</fullName>
    <description>This is used for Outbound Brokers to help determine which connection credentials should be used. The credentials themselves should be held in secure storage, this field is just pointer and it may functional differently for different types of connection</description>
    <inlineHelpText>This is used for Outbound Brokers to help determine which connection credentials should be used. The credentials themselves should be held in secure storage, this field is just pointer and it may functional differently for different types of connection</inlineHelpText>
    <label>External Credentials Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>