dxscale/core/serviceBase/objects/Service__mdt/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this is a service that should not be called outside of its implemented Virtual Package - defaults to false.</description>
    <inlineHelpText>Checked if this is a service that should not be called outside of its implemented Virtual Package - defaults to false.</inlineHelpText>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>