dxscale/core/serviceBase/objects/Service__mdt/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <defaultValue>&quot;Internal Processing&quot;</defaultValue>
    <description>Type of the Service</description>
    <inlineHelpText>Type of the Service</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Data Access</fullName>
            </value>
            <value>
                <fullName>Internal Processing</fullName>
                <default>true</default>
                <label>Internal Processing</label>
            </value>
            <value>
                <fullName>External Inbound</fullName>
            </value>
            <value>
                <fullName>External Outbound</fullName>
            </value>
            <value>
                <fullName>Remote Proxy</fullName>
            </value>
            <value>
                <fullName>External Subscriber</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>