dxscale/core/serviceBase/objects/Service__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>If Active then default is that calls to the service will pass through to the implementation code.
If Stubbed then all invocations must be stubbed or the Service will not be invoked.
If Down then the service has been brought down and there is no processing</description>
    <inlineHelpText>If Active then default is that calls to the service will pass through to the implementation code.
If Stubbed then all invocations must be stubbed or the Service will not be invoked.
If Down then the service has been brought down and there is no processing</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Stubbed</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>