dxscale/core/serviceBase/objects/Service__mdt/listViews/Full_Service.listView-meta.xml
<ListView>
    <fullName>Full_Service</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Service_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Extensible__c</columns>
    <filterScope>Everything</filterScope>
    <label>Full Service</label>
</ListView>